# Projekt_Jakosc_Powietrza

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: _air_analyzer_8cpp.html  _air_analyzer_8hpp.html  _air_analyzer_8hpp.js  _air_analyzer_8hpp_source.html  _air_quality_index_8cpp.html  _air_quality_index_8hpp.html  _air_quality_index_8hpp.js  _air_quality_index_8hpp_source.html  _app_exceptions_8cpp.html  _app_exceptions_8hpp.html  _app_exceptions_8hpp.js  _app_exceptions_8hpp_source.html  _async_fetcher_8cpp.html  _async_fetcher_8hpp.html  _async_fetcher_8hpp.js  _async_fetcher_8hpp_source.html  _batch_downloader_8cpp.html  _batch_downloader_8hpp.html  _batch_downloader_8hpp.js  _batch_downloader_8hpp_source.html  _chart_widget_8cpp.html  _chart_widget_8hpp.html  _chart_widget_8hpp.js  _chart_widget_8hpp_source.html  _database_manager_8cpp.html  _database_manager_8hpp.html  _database_manager_8hpp.js  _database_manager_8hpp_source.html  _date_range_selector_8cpp.html  _date_range_selector_8hpp.html  _date_range_selector_8hpp.js  _date_range_selector_8hpp_source.html  _geo_locator_8cpp.html  _geo_locator_8hpp.html  _geo_locator_8hpp.js  _geo_locator_8hpp_source.html  _gios_client_8cpp.html  _gios_client_8hpp.html  _gios_client_8hpp.js  _gios_client_8hpp_source.html  (+175 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+33 more)
include/analysis/: AirAnalyzer.hpp  GeoLocator.hpp  ITrendStrategy.hpp  LinearTrendStrategy.hpp  MovingAverageTrendStrategy.hpp
include/api/: AsyncFetcher.hpp  GiosClient.hpp
include/core/: AirQualityIndex.hpp  Measurement.hpp  Sensor.hpp  Station.hpp
include/gui/: BatchDownloader.hpp  ChartWidget.hpp  DateRangeSelector.hpp  MainWindow.hpp  RadiusSearchDialog.hpp  SensorSelectorWidget.hpp  StationListWidget.hpp
include/storage/: DatabaseManager.hpp
include/utils/: AppExceptions.hpp  Logger.hpp
src/: main.cpp
src/analysis/: AirAnalyzer.cpp  GeoLocator.cpp  LinearTrendStrategy.cpp  MovingAverageTrendStrategy.cpp
src/api/: AsyncFetcher.cpp  GiosClient.cpp
src/core/: AirQualityIndex.cpp  Measurement.cpp  Sensor.cpp  Station.cpp
src/gui/: BatchDownloader.cpp  ChartWidget.cpp  DateRangeSelector.cpp  MainWindow.cpp  MainWindow.ui  RadiusSearchDialog.cpp  SensorSelectorWidget.cpp  StationListWidget.cpp
src/storage/: DatabaseManager.cpp
src/utils/: AppExceptions.cpp  Logger.cpp
tests/: test_AirAnalyzer.cpp  test_AirQualityIndex.cpp  test_DatabaseManager.cpp  test_GeoLocator.cpp  test_Sensor.cpp
